Include Mapbox token directly in HTML to ensure availability

--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
         </div>
     </div>
 
-    <!-- Load config first as a module -->
-    <script type="module">
-        import './js/config.js';
+    <!-- Set Mapbox token directly -->
+    <script>
+        window.MAPBOX_TOKEN = 'pk.eyJ1IjoiaGdvdHRpcGF0aSIsImEiOiJjbTh0cjRzazMwZXFvMnNxMmExNTdqZjBlIn0.JffbXqKwr5oh2_kMapNyDw';
     </script>
     
     <!-- Then load other scripts -->
@@ -449,11 +449,9 @@
     <script type="module" src="js/location.js"></script>
     <script type="module" src="js/ui.js"></script>
     <script type="module" src="js/script.js"></script>
-    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'92be990c6be3ba48',t:'MTc0MzkxNDMyOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
-
 
     <script>
-               // Dynamically calculate header height and update CSS variable
+        // Dynamically calculate header height and update CSS variable
         function updateHeaderHeight() {
             const header = document.getElementById('header');
             const headerHeight = header.offsetHeight;
@@ -465,12 +463,12 @@
 
         // Search on Enter key press
         const addressInput = document.getElementById('address');
-            addressInput.addEventListener('keydown', (event) => {
-                if (event.key === 'Enter') {
-                    event.preventDefault();
-                    showChargers();
-                }
-            });
+        addressInput.addEventListener('keydown', (event) => {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                showChargers();
+            }
+        });
 
         // Prevent map touch events from scrolling the page
         document.getElementById('map')?.addEventListener('touchmove', (event) => {
