Ensure filter icon is perfectly square in both dimensions

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                 min-height: 25px;
                 max-width: 25px;
                 max-height: 25px;
+                box-sizing: border-box;
             }
 
             .filter-button i {
@@ -219,6 +220,7 @@
                 min-height: 22px;
                 max-width: 22px;
                 max-height: 22px;
+                box-sizing: border-box;
             }
 
             .filter-button i {
@@ -293,6 +295,7 @@
             aspect-ratio: 1;
             flex-shrink: 0;
             flex-grow: 0;
+            box-sizing: border-box;
         }
 
         .filter-button:hover {
@@ -308,6 +311,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            box-sizing: border-box;
         }
 
         /* Filter Modal Styles */
