--- a/index.html
+++ b/index.html
@@ -319,86 +319,154 @@
             max-width: 500px;
             width: 90%;
             max-height: 80vh;
-            overflow-y: auto;
+            min-height: 400px;
+            min-width: 320px;
             background: #fff;
             border: 2px solid #00355F;
             border-radius: 12px;
-        }
-
-        .modal-header {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            box-sizing: border-box;
+        }
+        .modal-header {
+            flex-shrink: 0;
+            z-index: 2;
+        }
+        .filter-sections {
+            flex: 1 1 auto;
+            overflow-y: auto;
+            padding: 20px 0;
+            min-height: 200px;
+        }
+        .filter-section.collapsed .section-content {
+            display: none;
+        }
+        .filter-section.collapsed .chevron {
+            transform: rotate(-90deg);
+        }
+        .filter-section .section-content .select-all {
+            font-weight: 600;
+            margin-bottom: 4px;
+        }
+        .filter-section .section-content .child-option {
+            margin-left: 24px;
+            font-weight: 400;
+        }
+        .modal-footer {
+            flex-shrink: 0;
+            z-index: 2;
+            background: #fff;
+            position: sticky;
+            bottom: 0;
+            display: flex;
+            justify-content: space-between;
             align-items: center;
-            gap: 12px;
-            padding-bottom: 15px;
-            border-bottom: 1px solid #eee;
+            gap: 16px;
+            padding: 18px 24px 18px 24px;
+            border-top: 1px solid #eee;
+        }
+        .primary-button, .secondary-button {
+            flex: 1 1 0;
+            max-width: 180px;
+            font-size: 1.08rem;
+            padding: 12px 0;
+        }
+        .primary-button {
             background: #00355F;
             color: #EEC218;
-            border-radius: 12px 12px 0 0;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: bold;
         }
-
-        .modal-header h2 {
-            margin: 0;
-            font-size: 1.5rem;
+        .secondary-button {
+            background: #f0f0f0;
+            color: #00355F;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .modal-header .header-title {
+            font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
+            font-size: 1.15rem;
+            font-weight: 500;
+            color: #EEC218;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .modal-header .header-title i {
+            font-size: 1.2rem;
             color: #EEC218;
         }
-
         .close-button {
             background: none;
             border: none;
-            font-size: 24px;
+            font-size: 1.5rem;
             cursor: pointer;
             color: #EEC218;
+            position: absolute;
+            right: 24px;
+            top: 16px;
         }
-
-        .filter-sections {
-            padding: 20px 0;
-        }
-
         .filter-section {
-            margin-bottom: 20px;
+            margin-bottom: 16px;
             background: #f7f9fb;
             border-radius: 8px;
-            padding: 12px 16px;
+            padding: 0;
             box-shadow: 0 1px 4px rgba(0,53,95,0.05);
         }
-
-        .filter-section h3 {
-            margin: 0 0 10px 0;
+        .filter-section .section-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            cursor: pointer;
+            padding: 12px 16px;
+            font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
+            font-size: 1.05rem;
+            font-weight: 500;
+            color: #00355F;
+            border-radius: 8px;
+            transition: background 0.2s;
+        }
+        .filter-section .section-header:hover {
+            background: #EEC21822;
+        }
+        .filter-section .chevron {
             font-size: 1.1rem;
             color: #00355F;
-            display: flex;
-            align-items: center;
-            gap: 8px;
+            transition: transform 0.2s;
         }
-
-        .filter-section label {
+        .filter-section .section-content label {
             display: flex;
             align-items: center;
             gap: 8px;
-            margin: 8px 0;
+            margin: 10px 0 0 0;
             color: #00355F;
             font-weight: 500;
             border-radius: 4px;
-            padding: 4px 8px;
+            padding: 4px 0;
             transition: background 0.2s;
+            width: 100%;
         }
-        .filter-section label:hover {
+        .filter-section .section-content label:first-child {
+            margin-top: 0;
+        }
+        .filter-section .section-content label:hover {
             background: #EEC21822;
         }
-        .filter-section input[type="checkbox"]:checked + span {
-            color: #EEC218;
-            font-weight: bold;
-        }
-        .filter-section input[type="checkbox"] {
+        .filter-section .section-content input[type="checkbox"] {
             accent-color: #EEC218;
         }
-        .filter-section .operator-badge {
-            display: inline-block;
+        .filter-section .section-content .operator-badge {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
             width: 18px;
             height: 18px;
             border-radius: 50%;
-            margin-right: 6px;
+            margin-right: 4px;
             vertical-align: middle;
         }
         .operator-tesla { background: #c41e1e; }
@@ -406,41 +474,6 @@
         .operator-electrify { background: #43b02a; }
         .operator-evgo { background: #6c47a3; }
         .operator-blink { background: #222; }
-
-        .modal-footer {
-            padding-top: 15px;
-            border-top: 1px solid #eee;
-            display: flex;
-            gap: 10px;
-            justify-content: flex-end;
-        }
-
-        .primary-button {
-            background: #00355F;
-            color: #EEC218;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        .secondary-button {
-            background: #f0f0f0;
-            color: #00355F;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .primary-button:hover {
-            background: #002a4a;
-        }
-
-        .secondary-button:hover {
-            background: #e0e0e0;
-        }
     </style>
 </head>
 <body>
@@ -462,50 +495,65 @@
     <!-- Filter Modal -->
     <div id="filter-modal" class="modal">
         <div class="modal-content filter-modal-content">
-            <div class="modal-header" style="justify-content: center; align-items: center; gap: 12px;">
-                <span style="display: flex; align-items: center; gap: 10px;">
-                    <i class="fas fa-filter" style="color: #EEC218; font-size: 2rem;"></i>
-                    <span style="font-size: 1.7rem; font-weight: bold; color: #EEC218; letter-spacing: 1px;">Filter Chargers</span>
+            <div class="modal-header">
+                <span class="header-title">
+                    <i class="fas fa-filter"></i>
+                    Filter Chargers
                 </span>
-                <button class="close-button" style="position: absolute; right: 24px; top: 18px; color: #EEC218; font-size: 2rem;">&times;</button>
+                <button class="close-button">&times;</button>
             </div>
             <div class="filter-sections">
-                <div class="filter-section">
-                    <h3><i class="fas fa-bolt"></i> Charger Types</h3>
-                    <label><input type="checkbox" id="fastOnly"> Fast chargers only (Level 3)</label>
-                    <label><input type="checkbox" id="level2Only"> Level 2 chargers</label>
+                <div class="filter-section collapsed" id="section-charger-types">
+                    <div class="section-header" onclick="toggleSection(event, 'section-charger-types')">
+                        <span><i class="fas fa-bolt"></i> Charger Types</span>
+                        <i class="fas fa-chevron-down chevron"></i>
+                    </div>
+                    <div class="section-content">
+                        <label class="child-option select-all"><input type="checkbox" id="selectAllChargerTypes"> Select All</label>
+                        <label class="child-option"><input type="checkbox" class="charger-type-child" id="fastOnly"> Fast chargers only (Level 3)</label>
+                        <label class="child-option"><input type="checkbox" class="charger-type-child" id="level2Only"> Level 2 chargers</label>
+                    </div>
                 </div>
-
-                <div class="filter-section">
-                    <h3><i class="fas fa-car"></i> Tesla Chargers</h3>
-                    <label>
-                        <input type="checkbox" id="teslaSupercharger">
-                        <span class="operator-badge" style="background: none; margin-right: 4px; display: flex; align-items: center; justify-content: center; width: 18px; height: 18px;">
-                            <i class="fas fa-bolt" style="color: #EEC218; font-size: 1.1em;"></i>
-                        </span>
-                        Tesla Superchargers
-                    </label>
-                    <label><input type="checkbox" id="teslaDestination"> Tesla Destination</label>
+                <div class="filter-section collapsed" id="section-network">
+                    <div class="section-header" onclick="toggleSection(event, 'section-network')">
+                        <span><i class="fas fa-network-wired"></i> Network Providers</span>
+                        <i class="fas fa-chevron-down chevron"></i>
+                    </div>
+                    <div class="section-content">
+                        <label class="child-option select-all"><input type="checkbox" id="selectAllNetwork"> Select All</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="teslaSupercharger">Tesla Superchargers <span class="operator-badge" style="background: none;"><i class="fas fa-bolt" style="color: #EEC218; font-size: 1.1em;"></i></span></label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="teslaDestination">Tesla Destination</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="chargepointOnly">ChargePoint</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="electrifyAmerica">Electrify America</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="evgo">EVgo</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="blink">Blink</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="volta">Volta</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="shellRecharge">Shell Recharge</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="evConnect">EV Connect</label>
+                        <label class="child-option"><input type="checkbox" class="network-child" id="semaConnect">SemaConnect</label>
+                    </div>
                 </div>
-
-                <div class="filter-section">
-                    <h3><i class="fas fa-network-wired"></i> Network Providers</h3>
-                    <label><input type="checkbox" id="chargepointOnly"> ChargePoint</label>
-                    <label><input type="checkbox" id="electrifyAmerica"> Electrify America</label>
-                    <label><input type="checkbox" id="evgo"> EVgo</label>
-                    <label><input type="checkbox" id="blink"> Blink</label>
+                <div class="filter-section collapsed" id="section-status">
+                    <div class="section-header" onclick="toggleSection(event, 'section-status')">
+                        <span><i class="fas fa-check-circle"></i> Charger Status</span>
+                        <i class="fas fa-chevron-down chevron"></i>
+                    </div>
+                    <div class="section-content">
+                        <label class="child-option select-all"><input type="checkbox" id="selectAllStatus"> Select All</label>
+                        <label class="child-option"><input type="checkbox" class="status-child" id="operationalOnly" checked> Operational only</label>
+                    </div>
                 </div>
-
-                <div class="filter-section">
-                    <h3><i class="fas fa-check-circle"></i> Charger Status</h3>
-                    <label><input type="checkbox" id="operationalOnly" checked> Operational only</label>
-                </div>
-
-                <div class="filter-section">
-                    <h3><i class="fas fa-tachometer-alt"></i> Power Output</h3>
-                    <label><input type="checkbox" id="highPower"> High power (150kW+)</label>
-                    <label><input type="checkbox" id="mediumPower"> Medium power (50-150kW)</label>
-                    <label><input type="checkbox" id="lowPower"> Low power (<50kW)</label>
+                <div class="filter-section collapsed" id="section-power">
+                    <div class="section-header" onclick="toggleSection(event, 'section-power')">
+                        <span><i class="fas fa-tachometer-alt"></i> Power Output</span>
+                        <i class="fas fa-chevron-down chevron"></i>
+                    </div>
+                    <div class="section-content">
+                        <label class="child-option select-all"><input type="checkbox" id="selectAllPower"> Select All</label>
+                        <label class="child-option"><input type="checkbox" class="power-child" id="highPower"> High power (150kW+)</label>
+                        <label class="child-option"><input type="checkbox" class="power-child" id="mediumPower"> Medium power (50-150kW)</label>
+                        <label class="child-option"><input type="checkbox" class="power-child" id="lowPower"> Low power (<50kW)</label>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
@@ -554,6 +602,20 @@
         window.addEventListener('load', updateHeaderHeight);
         window.addEventListener('resize', updateHeaderHeight);
 
+        // Accordion logic for filter sections
+        function toggleSection(event, sectionId) {
+            event.stopPropagation();
+            const section = document.getElementById(sectionId);
+            section.classList.toggle('collapsed');
+        }
+
+        // All sections collapsed by default
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelectorAll('.filter-section').forEach(section => {
+                section.classList.add('collapsed');
+            });
+        });
+
         // Search on Enter key press
         const addressInput = document.getElementById('address');
         addressInput.addEventListener('keydown', (event) => {
@@ -567,6 +629,31 @@
         document.getElementById('map')?.addEventListener('touchmove', (event) => {
             event.stopPropagation();
         }, { passive: false });
+
+        // Select All logic for each section
+        function setupSelectAll(sectionId, selectAllId, childClass) {
+            const selectAll = document.getElementById(selectAllId);
+            const children = document.querySelectorAll(`#${sectionId} .${childClass}`);
+            selectAll.addEventListener('change', function() {
+                children.forEach(cb => { cb.checked = selectAll.checked; });
+            });
+            children.forEach(cb => {
+                cb.addEventListener('change', function() {
+                    if (!cb.checked) {
+                        selectAll.checked = false;
+                    } else {
+                        const allChecked = Array.from(children).every(c => c.checked);
+                        selectAll.checked = allChecked;
+                    }
+                });
+            });
+        }
+        document.addEventListener('DOMContentLoaded', () => {
+            setupSelectAll('section-charger-types', 'selectAllChargerTypes', 'charger-type-child');
+            setupSelectAll('section-network', 'selectAllNetwork', 'network-child');
+            setupSelectAll('section-status', 'selectAllStatus', 'status-child');
+            setupSelectAll('section-power', 'selectAllPower', 'power-child');
+        });
     </script>
 </body>
 </html>
