Indent child filter options further under 'Select All' for better visual hierarchy

--- a/index.html
+++ b/index.html
@@ -347,10 +347,14 @@
         .filter-section .section-content .select-all {
             font-weight: 600;
             margin-bottom: 4px;
+            margin-left: 0;
         }
         .filter-section .section-content .child-option {
-            margin-left: 24px;
+            margin-left: 36px;
             font-weight: 400;
+        }
+        .filter-section .section-content .select-all.child-option {
+            margin-left: 24px;
         }
         .modal-footer {
             flex-shrink: 0;
