Fix filter button aspect ratio and sizing for mobile to ensure square appearance

--- a/index.html
+++ b/index.html
@@ -184,17 +184,19 @@
             }
 
             .filter-button {
-                width: 25px;
-                height: 25px;
-                min-width: 25px;
-                min-height: 25px;
-                max-width: 25px;
-                max-height: 25px;
+                width: 32px;
+                height: 32px;
+                min-width: 32px;
+                min-height: 32px;
+                max-width: 32px;
+                max-height: 32px;
+                aspect-ratio: 1 / 1;
                 box-sizing: border-box;
+                padding: 0; /* Ensure no extra padding */
             }
 
             .filter-button i {
-                font-size: 0.8rem;
+                font-size: 1.2rem;
             }
         }
 
