--- a/index.html
+++ b/index.html
@@ -197,8 +197,11 @@
 
             .filter-button i {
                 font-size: 1.3rem;
+                width: 100%;
+                height: 100%;
                 margin: 0 !important;
                 padding: 0 !important;
+                text-align: center;
             }
         }
 
@@ -225,6 +228,8 @@
 
             .filter-button i {
                 font-size: 1.1rem;
+                width: 100%;
+                height: 100%;
             }
         }
         /* Disable UI until map is ready */
@@ -305,12 +310,14 @@
 
         .filter-button i {
             font-size: 1.3rem;
-            line-height: 1;
-            width: 1em;
-            height: 1em;
+            width: 100%;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
+            margin: 0 !important;
+            padding: 0 !important;
+            text-align: center;
             box-sizing: border-box;
         }
 
