--- a/index.html
+++ b/index.html
@@ -321,6 +321,10 @@
             box-sizing: border-box;
         }
 
+        .filter-button i.fas.fa-filter {
+            margin-left: 3px; /* Adjust this value as needed for perfect centering */
+        }
+
         /* Filter Modal Styles */
         .filter-modal-content {
             max-width: 500px;
