--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
             z-index: 1; /* Ensure map is below header and controls */
         }
 
-        #controls { 
-            position: absolute; 
-            top: calc(var(--header-height) + 10px); 
-            right: 50px; /* Move left of the zoom controls */
-            z-index: 2; /* Above map */
-            background: white; 
-            padding: 10px; 
-            border-radius: 5px; 
-            box-shadow: 0 0 5px rgba(0,0,0,0.3); 
-            display: flex; 
-            flex-direction: column; /* Stack controls vertically */
-            gap: 10px; 
-            margin-top: 0; /* Remove the margin since we're positioning it directly under the banner */
+        #controls {
+            position: absolute;
+            top: calc(var(--header-height) + 16px);
+            right: 16px;
+            z-index: 10;
+            background: none;
+            padding: 0;
+            border-radius: 0;
+            box-shadow: none;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-top: 0;
         }
 
         #controls select, 
