--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
             #controls {
                 top: calc(var(--header-height) + 5px);
-                right: 12px;
+                right: 8px;
                 width: auto;
                 flex-direction: column;
                 gap: 8px;
@@ -319,6 +319,8 @@
             padding: 0 !important;
             text-align: center;
             box-sizing: border-box;
+            font-weight: 300;
+            opacity: 0.85;
         }
 
         .filter-button i.fas.fa-filter {
@@ -489,6 +491,34 @@
         .operator-electrify { background: #43b02a; }
         .operator-evgo { background: #6c47a3; }
         .operator-blink { background: #222; }
+        /* Mapbox control button size and alignment */
+        .mapboxgl-ctrl-group button,
+        .mapboxgl-ctrl-group .mapboxgl-ctrl-icon {
+            width: 40px !important;
+            height: 40px !important;
+            min-width: 40px;
+            min-height: 40px;
+            max-width: 40px;
+            max-height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-sizing: border-box;
+            padding: 0;
+            font-size: 1.2rem;
+        }
+        @media (max-width: 480px) {
+            .mapboxgl-ctrl-group button,
+            .mapboxgl-ctrl-group .mapboxgl-ctrl-icon {
+                width: 32px !important;
+                height: 32px !important;
+                min-width: 32px;
+                min-height: 32px;
+                max-width: 32px;
+                max-height: 32px;
+                font-size: 1rem;
+            }
+        }
     </style>
 </head>
 <body>
