add funnel back

--- a/index.html
+++ b/index.html
@@ -519,6 +519,12 @@
                 font-size: 1rem;
             }
         }
+        .filter-button svg {
+            width: 1.3em;
+            height: 1.3em;
+            display: block;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
@@ -533,7 +539,9 @@
     </div>
     <div id="controls">
         <button id="filter-button" class="filter-button" title="Show Filters">
-            <i class="fas fa-filter"></i>
+            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="#00355F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: block; margin: auto;">
+                <path d="M4 4h16l-6.5 8.5v5a1.5 1.5 0 0 1-3 0v-5L4 4z"/>
+            </svg>
         </button>
     </div>
 
