--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
             flex-shrink: 0;
             flex-grow: 0;
             box-sizing: border-box;
+            position: absolute;
+            top: 60px; /* Position it below the current location control */
+            right: 10px;
         }
 
         .filter-button:hover {
