--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         #controls {
             position: absolute;
             top: calc(var(--header-height) + 16px);
-            right: 60px;
+            right: 10px;
             z-index: 10;
             background: none;
             padding: 0;
@@ -159,18 +159,18 @@
             }
 
             .search-container button  {
-                display: block; /* Keep the button visible */
-                padding: 5px 8px; /* Adjust size for mobile */
+                display: block;
+                padding: 5px 8px;
                 font-size: 12px;
             }
 
             #controls {
-                top: calc(var(--header-height) + 5px);
+                top: calc(var(--header-height) + 8px);
                 right: 8px;
                 width: auto;
                 flex-direction: column;
                 gap: 8px;
-                padding: 10px;
+                padding: 0;
                 margin-top: 0;
             }
 
@@ -193,6 +193,8 @@
                 padding: 0 !important;
                 margin: 0 !important;
                 box-sizing: border-box;
+                top: 60px;
+                right: 8px;
             }
 
             .filter-button i {
@@ -216,14 +218,18 @@
             }
 
             #controls {
-                padding: 10px;
-                width: 120px; /* Even narrower for smaller screens */
+                top: calc(var(--header-height) + 8px);
+                right: 8px;
+                padding: 0;
+                width: auto;
             }
 
             .filter-button {
                 width: 32px !important;
                 height: 32px !important;
                 aspect-ratio: 1 / 1;
+                top: 60px;
+                right: 8px;
             }
 
             .filter-button i {
@@ -302,7 +308,7 @@
             flex-grow: 0;
             box-sizing: border-box;
             position: absolute;
-            top: 60px; /* Position it below the current location control */
+            top: 60px;
             right: 10px;
         }
 
