--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 padding: 0 !important;
                 margin: 0 !important;
                 box-sizing: border-box;
-                top: 100px;
+                top: calc(var(--header-height) + 8px + 80px);
                 right: 8px;
             }
         }
@@ -210,7 +210,7 @@
                 width: 32px !important;
                 height: 32px !important;
                 aspect-ratio: 1 / 1;
-                top: 100px;
+                top: calc(var(--header-height) + 8px + 80px);
                 right: 8px;
             }
         }
@@ -284,7 +284,7 @@
             flex-grow: 0;
             box-sizing: border-box;
             position: absolute;
-            top: 100px; /* Position it below the Mapbox control group */
+            top: calc(var(--header-height) + 16px + 80px); /* Position it below the Mapbox control group */
             right: 10px;
         }
 
