move the filter left on top

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         .filter-button {
             position: absolute;
             top: 100%;
-            right: 0;
+            right: 20px;
             margin-top: 8px;
         }
     </style>
