--- a/index.html
+++ b/index.html
@@ -175,15 +175,8 @@
             }
 
             .filter-button {
-                width: 40px !important;
-                height: 40px !important;
-                aspect-ratio: 1 / 1;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 0 !important;
-                margin: 0 !important;
-                box-sizing: border-box;
+                right: 0;
+                margin-top: 8px;
             }
         }
 
