--- a/index.html
+++ b/index.html
@@ -311,22 +311,66 @@
             display: flex;
             flex-direction: column;
             box-sizing: border-box;
+            overflow-x: hidden;
         }
         .modal-header {
             flex-shrink: 0;
             z-index: 2;
+            padding: 16px 24px;
+            box-sizing: border-box;
+            width: 100%;
         }
         .filter-sections {
             flex: 1 1 auto;
             overflow-y: auto;
-            padding: 20px 0;
+            overflow-x: hidden;
+            padding: 20px 24px;
             min-height: 200px;
+            box-sizing: border-box;
+            width: 100%;
         }
         .filter-section.collapsed .section-content {
             display: none;
         }
         .filter-section.collapsed .chevron {
             transform: rotate(-90deg);
+        }
+        .filter-section {
+            margin-bottom: 16px;
+            background: #f7f9fb;
+            border-radius: 8px;
+            padding: 0;
+            box-shadow: 0 1px 4px rgba(0,53,95,0.05);
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .filter-section .section-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            cursor: pointer;
+            padding: 12px 16px;
+            font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
+            font-size: 1.05rem;
+            font-weight: 500;
+            color: #00355F;
+            border-radius: 8px;
+            transition: background 0.2s;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .filter-section .section-header:hover {
+            background: #EEC21822;
+        }
+        .filter-section .chevron {
+            font-size: 1.1rem;
+            color: #00355F;
+            transition: transform 0.2s;
+        }
+        .filter-section .section-content {
+            padding: 0 16px 16px;
+            box-sizing: border-box;
+            width: 100%;
         }
         .filter-section .section-content .select-all {
             font-weight: 600;
@@ -340,6 +384,43 @@
         .filter-section .section-content .select-all.child-option {
             margin-left: 24px;
         }
+        .filter-section .section-content label {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin: 10px 0 0 0;
+            color: #00355F;
+            font-weight: 500;
+            border-radius: 4px;
+            padding: 4px 0;
+            transition: background 0.2s;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .filter-section .section-content label:first-child {
+            margin-top: 0;
+        }
+        .filter-section .section-content label:hover {
+            background: #EEC21822;
+        }
+        .filter-section .section-content input[type="checkbox"] {
+            accent-color: #EEC218;
+        }
+        .filter-section .section-content .operator-badge {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            margin-right: 4px;
+            vertical-align: middle;
+        }
+        .operator-tesla { background: #c41e1e; }
+        .operator-chargepoint { background: #0072c6; }
+        .operator-electrify { background: #43b02a; }
+        .operator-evgo { background: #6c47a3; }
+        .operator-blink { background: #222; }
         .modal-footer {
             flex-shrink: 0;
             z-index: 2;
@@ -352,6 +433,8 @@
             gap: 16px;
             padding: 18px 24px 18px 24px;
             border-top: 1px solid #eee;
+            width: 100%;
+            box-sizing: border-box;
         }
         .primary-button, .secondary-button {
             flex: 1 1 0;
@@ -398,70 +481,6 @@
             right: 24px;
             top: 16px;
         }
-        .filter-section {
-            margin-bottom: 16px;
-            background: #f7f9fb;
-            border-radius: 8px;
-            padding: 0;
-            box-shadow: 0 1px 4px rgba(0,53,95,0.05);
-        }
-        .filter-section .section-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            cursor: pointer;
-            padding: 12px 16px;
-            font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
-            font-size: 1.05rem;
-            font-weight: 500;
-            color: #00355F;
-            border-radius: 8px;
-            transition: background 0.2s;
-        }
-        .filter-section .section-header:hover {
-            background: #EEC21822;
-        }
-        .filter-section .chevron {
-            font-size: 1.1rem;
-            color: #00355F;
-            transition: transform 0.2s;
-        }
-        .filter-section .section-content label {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            margin: 10px 0 0 0;
-            color: #00355F;
-            font-weight: 500;
-            border-radius: 4px;
-            padding: 4px 0;
-            transition: background 0.2s;
-            width: 100%;
-        }
-        .filter-section .section-content label:first-child {
-            margin-top: 0;
-        }
-        .filter-section .section-content label:hover {
-            background: #EEC21822;
-        }
-        .filter-section .section-content input[type="checkbox"] {
-            accent-color: #EEC218;
-        }
-        .filter-section .section-content .operator-badge {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 18px;
-            height: 18px;
-            border-radius: 50%;
-            margin-right: 4px;
-            vertical-align: middle;
-        }
-        .operator-tesla { background: #c41e1e; }
-        .operator-chargepoint { background: #0072c6; }
-        .operator-electrify { background: #43b02a; }
-        .operator-evgo { background: #6c47a3; }
-        .operator-blink { background: #222; }
         /* Mapbox control button size and alignment */
         .mapboxgl-ctrl-group button,
         .mapboxgl-ctrl-group .mapboxgl-ctrl-icon {
