Update index.html and mapUtils.js to support new popup behavior

--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@
     
     <!-- Then load other scripts -->
     <script type="module" src="js/api.js"></script>
+    <script type="module" src="js/customPopup.js"></script>
     <script type="module" src="js/mapUtils.js"></script>
     <script type="module" src="js/location.js"></script>
     <script type="module" src="js/ui.js"></script>
