--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://chargenear.com">
     <meta property="og:title" content="ChargeNear - Find EV Charging Stations">
     <meta property="og:description" content="Locate nearby electric vehicle charging stations with real-time availability and detailed information.">
-    <meta property="og:image" content="https://api.mapbox.com/styles/v1/mapbox/streets-v12/static/pin-l-charging+EEC218(-122.3321,47.6062)/[-122.3321,47.6062,11]/1200x630@2x?access_token=${MAPBOX_TOKEN}">
+    <meta property="og:image" content="https://api.mapbox.com/styles/v1/mapbox/streets-v12/static/pin-l-charging+EEC218(-122.3321,47.6062),box-l-t+00355F(-122.3321,47.6062,[ChargeNear])/[-122.3321,47.6062,11]/1200x630@2x?access_token=${MAPBOX_TOKEN}&logo=false">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     
@@ -23,7 +23,7 @@
     <meta property="twitter:url" content="https://chargenear.com">
     <meta property="twitter:title" content="ChargeNear - Find EV Charging Stations">
     <meta property="twitter:description" content="Locate nearby electric vehicle charging stations with real-time availability and detailed information.">
-    <meta property="twitter:image" content="https://api.mapbox.com/styles/v1/mapbox/streets-v12/static/pin-l-charging+EEC218(-122.3321,47.6062)/[-122.3321,47.6062,11]/1200x630@2x?access_token=${MAPBOX_TOKEN}">
+    <meta property="twitter:image" content="https://api.mapbox.com/styles/v1/mapbox/streets-v12/static/pin-l-charging+EEC218(-122.3321,47.6062),box-l-t+00355F(-122.3321,47.6062,[ChargeNear])/[-122.3321,47.6062,11]/1200x630@2x?access_token=${MAPBOX_TOKEN}&logo=false">
     
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
