--- a/index.html
+++ b/index.html
@@ -173,34 +173,32 @@
 
         @media (max-width: 768px) {
             .header {
-                padding: 0.5rem;
+                padding: 0.5rem 1rem;
             }
-
             .header-content {
-                flex-direction: column;
-                gap: 8px;
+                flex-wrap: nowrap;
+                gap: 10px;
             }
-
             .header-content h1 {
+                flex: 0 1 auto;
                 font-size: 1.25rem;
-                text-align: center;
+                text-align: left;
             }
-
             .search-container {
-                width: 100%;
-                justify-content: center;
+                flex: 1 1 auto;
+                min-width: 120px;
             }
-
+            .header-content nav {
+                flex: 0 0 auto;
+            }
             .search-container input[type="text"] {
                 max-width: 100%;
             }
-
-            .search-container button  {
+            .search-container button {
                 display: block;
                 padding: 5px 8px;
                 font-size: 12px;
             }
-
             #controls {
                 top: calc(var(--header-height) + 8px);
                 right: 8px;
@@ -210,7 +208,6 @@
                 padding: 0;
                 margin-top: 0;
             }
-
             .filter-button {
                 right: 0;
                 margin-top: 8px;
