--- a/about.html
+++ b/about.html
@@ -115,12 +115,12 @@
         </div>
 
         <div class="card">
-            <h2>About the Creator</h2>
+            <h2>About me</h2>
             <p>
               Hi, I'm Hareesh Gottipati, the creator of ChargeNear. As a Data Engineer with over 10 years of experience, I specialize in building scalable, high-performance data solutions with SQL, Python, and AWS. I'm passionate about automation, cloud infrastructure, and using AI to create efficient, data-driven workflows.
             </p>
             <p>
-              I developed ChargeNear as an open-source tool to help hotels and Airbnb hosts offer their guests an easy way to find nearby EV chargers, blending my technical expertise with my interest in sustainable technology.
+              I developed ChargeNear as an open-source tool to help hotels and Airbnb hosts offer their guests an easy way to find nearby EV chargers, blending my technical expertise with my interest in travel and sustainable technology.
             </p>
             <p class="repo-link">
               Let's connect! You can find me on <a href="https://www.linkedin.com/in/hareeshgottipati/" target="_blank" rel="noopener noreferrer">LinkedIn</a> or view my other projects on <a href="https://github.com/hgottipati" target="_blank" rel="noopener noreferrer">GitHub</a>.
