--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             font-weight: 500;
         }
         .container {
-            max-w-4xl;
+            max-width: 4xl;
             margin: 2rem auto;
             padding: 0 1rem;
         }
@@ -155,22 +155,22 @@
                 <div class="visit-item">
                     <div class="flag">🇩🇪</div>
                     <p>Germany</p>
-                    <p>800 visits</p>
+                    <p>200 visits</p>
                 </div>
                 <div class="visit-item">
                     <div class="flag">🇮🇳</div>
                     <p>India</p>
-                    <p>1,500 visits</p>
+                    <p>650 visits</p>
                 </div>
                 <div class="visit-item">
                     <div class="flag">🇯🇵</div>
                     <p>Japan</p>
-                    <p>500 visits</p>
+                    <p>120 visits</p>
                 </div>
                 <div class="visit-item">
                     <div class="flag">🇧🇷</div>
                     <p>Brazil</p>
-                    <p>700 visits</p>
+                    <p>100 visits</p>
                 </div>
             </div>
         </div>
