--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             }
             .search-container input[type="text"] {
                 max-width: 100%;
+                font-size: 16px; /* Prevent auto-zoom on mobile */
             }
             .search-container button {
                 display: block;
@@ -220,7 +221,7 @@
             }
 
             .search-container input[type="text"] {
-                font-size: 12px;
+                font-size: 16px; /* Prevent auto-zoom on mobile */
                 padding: 4px;
             }
 
