--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         }
 
         .header-content nav {
-            flex-grow: 1;
+            flex: 0 0 auto;
             text-align: right;
         }
 
