--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
         <div class="card">
             <h2>About me</h2>
             <p>
-              Hi, I'm Hareesh Gottipati, the creator of ChargeNear. As a Data Engineer with over 10 years of experience, I specialize in building scalable, high-performance data solutions with SQL, Python, and AWS. I'm passionate about automation, cloud infrastructure, and using AI to create efficient, data-driven workflows.
+              Hi, I'm Hareesh Gottipati, the creator of ChargeNear. As a Software Engineer with over 10 years of experience, I specialize in building scalable, high-performance data solutions with modern tech stack. I'm passionate about automation, cloud infrastructure, and using AI to create efficient, data-driven workflows.
             </p>
             <p>
               I developed ChargeNear as an open-source tool to help hotels and Airbnb hosts offer their guests an easy way to find nearby EV chargers, blending my technical expertise with my interest in travel and sustainable technology.
