--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 <body>
     <div class="header" id="header">
         <div class="header-content">
-            <h1><a href="/" style="color: inherit; text-decoration: none;">ChargeNear</a></h1>
+            <h1 style="padding-left: 16px;"><i class="fa-solid fa-bolt" style="color: #EEC218; margin-right: 8px;"></i><a href="/" style="color: inherit; text-decoration: none;">ChargeNear</a></h1>
             <div class="search-container">
                 <input type="text" id="address" placeholder="Enter a location (e.g., city, zip code)">
                 <button onclick="geocodeAddress()">Search</button>
